--- a/build.gradle
+++ b/build.gradle
@@ -10,20 +10,15 @@ repositories {
 
 dependencies {
     //test
-    testCompile 'io.rest-assured:rest-assured:3.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-
     //servlet
-    providedCompile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
-    compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.23.2'
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.23.2'
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'io.reactivex', name: 'rxjava', version: '1.2.0'
 }
 
 gretty {
-    httpPort = 3000
-    contextPath = '/'
+    httpPort = 8080
+    contextPath = '/tictactoe'
 }
